JumpScript/tests/baselines/reference/classImplementsClass7.errors.txt
tests/cases/compiler/classImplementsClass7.jump(5,7): error TS2720: Class 'B' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
  Property 'x' is missing in type 'B'.


==== tests/cases/compiler/classImplementsClass7.jump (1 errors) ====
    class A {
        private x: number;
    }
    
    class B implements A {}
          ~
!!! error TS2720: Class 'B' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
!!! error TS2720:   Property 'x' is missing in type 'B'.
    